--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    padding: 9em 1em;
+}
+
+input{
+    border-radius: 1em;
+    border-style: solid;
+    border-color: rgb(196, 196, 196);
+    height: 20px;
+    width: 50vw;
+    padding: .5em 1em;
+}
+
+
+input:focus{
+    outline: none;
+}
+
+.card{
+    align-content: center;
+    border: 1px solid rgb(204, 204, 204);
+    margin: 20px;
+    overflow:hidden;
+    border-radius: 2em;
+}
+
+.card p{
+    padding: 10px;
+    text-align: center;
+}
+
+.card img{
+    max-height: 170px;
+}
+.card-grid{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
